fixed overlapping css selectors

--- a/src/styles/components/ExpandButton.scss
+++ b/src/styles/components/ExpandButton.scss
@@ -1,19 +1,27 @@
-.navbar--location-lis .navbar--location-list__toggle {
+.navbar--location-list__toggle {
   button {
-    width: 100px;
-    height: 100%;
-    // position: absolute;
-    // top: 0;
-    // right: 25px;
-    // font-size: 36px;
-    // margin-left: 50px;
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Stay on top */
-    top: 0; /* Stay at the top */
-    left: 0;
-    background-color: #111; /* Black*/
-    overflow-x: hidden; /* Disable horizontal scroll */
-    padding-top: 60px; /* Place content 60px from the top */
-    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+    height: -webkit-fill-available;
+    width: 30px;
+    // height: 100%;
+    // // position: absolute;
+    // // top: 0;
+    // // right: 25px;
+    // // font-size: 36px;
+    // // margin-left: 50px;
+    // position: fixed; /* Stay in place */
+    // z-index: 1; /* Stay on top */
+    // top: 0; /* Stay at the top */
+    // left: 0;
+    // background-color: #111; /* Black*/
+    // overflow-x: hidden; /* Disable horizontal scroll */
+    // padding-top: 60px; /* Place content 60px from the top */
+    // transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+    span {
+      writing-mode: vertical-rl;
+      text-orientation: mixed;
+    }
+  }
+  img {
+    width: 25px;
   }
 }
