--- a/src/styles/components/LocationNavButton.scss
+++ b/src/styles/components/LocationNavButton.scss
@@ -1,4 +1,4 @@
-.navbar--location-list {
+.navbar--location-list__buttons {
   button {
     padding: 8px 8px 8px 32px;
     text-decoration: none;
