--- a/src/styles/containers/SideNav.scss
+++ b/src/styles/containers/SideNav.scss
@@ -9,13 +9,13 @@ nav {
   left: 0;
   background-color: #111; /* Black*/
   overflow-x: hidden; /* Disable horizontal scroll */
-  padding-top: 60px; /* Place content 60px from the top */
-  padding-bottom: 60px;
+  // padding-top: 60px; /* Place content 60px from the top */
+  // padding-bottom: 60px;
   transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
   .navbar--location-list {
-    order: 1;
+    order: 2;
   }
   .navbar--expand-button {
-    order: 2;
+    order: 1;
   }
 }
